--- a/Hello world/CMakeLists.txt
+++ b/Hello world/CMakeLists.txt
@@ -1,14 +1,16 @@
-﻿cmake_minimum_required (VERSION 3.8)
-project ("Hello world" C)
+﻿cmake_minimum_required(VERSION 3.8)
+project("Hello world" C)
 
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED TRUE)
-
-if("${CMAKE_C_COMPILER_ID}" STREQUAL "MSVC")
-add_compile_options(/W4  /D_CRT_SECURE_NO_WARNINGS)
-elseif("${CMAKE_CLANG_COMPILER_ID}" STREQUAL "Clang")
-add_compile_options(-Weverything -Werror)
-endif()
+if ("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
+    add_compile_options(-Wall -Wextra -Wpedantic -Werror)
+endif ()
+if ("${CMAKE_C_COMPILER_ID}" STREQUAL "MSVC")
+    add_compile_options(/W4 /D_CRT_SECURE_NO_WARNINGS)
+elseif ("${CMAKE_C_COMPILER_ID}" STREQUAL "Clang")
+    add_compile_options(-Weverything -Werror)
+endif ()
 
 add_subdirectory(01-basics)
 add_subdirectory(02-functions)
