--- a/Hello world/04-memory/CMakeLists.txt
+++ b/Hello world/04-memory/CMakeLists.txt
@@ -2,3 +2,4 @@
 
 add_executable(Int.c "Int.c")
 add_executable(VectorMain.c "VectorMain.c" "Vector.h" "Vector.c")
+add_executable(MatrixMain.c "MatrixMain.c" "Matrix.h" "Matrix.c")
