Не сделанный SafeRead

--- a/Hello world/01-basics/CMakeLists.txt
+++ b/Hello world/01-basics/CMakeLists.txt
@@ -16,4 +16,4 @@
 #add_executable(H6 "H6.c")
 #add_executable(H7 "H7.c")
 #add_executable(GCD "GCD.c")
-add_executable(STR "STR.c")
+#add_executable(STR "STR.c")
