--- a/Hello world/03-struct/CMakeLists.txt
+++ b/Hello world/03-struct/CMakeLists.txt
@@ -1,3 +1,4 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
-add_executable(StructIO "main.c" "Person.c" "Person.h")
+#add_executable(StructIO "main.c" "Person.c" "Person.h")
+add_executable(SafeRead "mainR.c" "SafeRead.c")
