--- a/Hello world/CMakeLists.txt
+++ b/Hello world/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory(01-basics)
 add_subdirectory(02-functions)
 add_subdirectory(03-struct)
 add_subdirectory(04-memory)
+add_subdirectory(05-sort)
