--- a/Hello world/05-sort/CMakeLists.txt
+++ b/Hello world/05-sort/CMakeLists.txt
@@ -1,3 +1,4 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
-add_executable(Sort "Main.c" "Sort.h" "SortSelection.c" "NaturalMergeSort.c")
+add_executable(Sort "Main.c" "Sort.h" "SortSelection.c" "NaturalMergeSort.c" "SortBubble.c" "SortShaker.c" "SortQuick.c")
+
