--- a/Hello world/CMakeLists.txt
+++ b/Hello world/CMakeLists.txt
@@ -11,8 +11,6 @@ if ("${CMAKE_C_COMPILER_ID}" STREQUAL "MSVC")
 elseif ("${CMAKE_C_COMPILER_ID}" STREQUAL "Clang")
     add_compile_options(-Weverything -Werror)
 endif ()
-add_subdirectory(01-basics)
-add_subdirectory(02-functions)
-add_subdirectory(03-struct)
-add_subdirectory(04-memory)
-add_subdirectory(05-sort)
+
+add_subdirectory(libutils)
+add_subdirectory(sort-comparison)
