--- a/Hello world/outdated/03-struct/CMakeLists.txt
+++ b/Hello world/outdated/03-struct/CMakeLists.txt
@@ -2,5 +2,5 @@
 
 add_executable(StructIO "main.c" "Person.c" "Person.h")
 add_executable(SafeRead "mainR.c" "SafeRead.c" "SafeRead.h")
-add_library(SafeReadLibrary STATIC SafeRead.c)
-target_link_libraries(StructIO SafeReadLibrary)
+#add_library(SafeReadLibrary STATIC SafeRead.c)
+#target_link_libraries(StructIO SafeReadLibrary)
