--- a/Hello world/libutils/CMakeLists.txt
+++ b/Hello world/libutils/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 add_library(utils_static STATIC
         include/libutils/Sort.h
+        include/libutils/AVLTree.h
+        src/AVLTree.c
         src/SortBubble.c
         src/SortQuick.c
         src/SortSelection.c
@@ -13,5 +15,7 @@ add_library(utils_dynamic SHARED
         src/SortSelection.c
         src/SortShaker.c
         src/NaturalMergeSort.c)
+
+
 target_include_directories(utils_static PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_include_directories(utils_dynamic PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
