--- a/Hello world/sort-comparison/CMakeLists.txt
+++ b/Hello world/sort-comparison/CMakeLists.txt
@@ -1,3 +1,2 @@
 add_executable(sort-comparison "Main.c")
-target_link_libraries(sort-comparison sort_static)
-target_link_libraries(sort-comparison read_static)
+target_link_libraries(sort-comparison utils_static)
